@@ -11,6 +11,7 @@
     shown with solid lines, as per Friendly specifications.
     \item fixed problems with \code{pairs_strucplot()} type argument, particularly for
     \code{type="conditional"}
+    \item Fixed error in \code{CoalMiners} data (missing group, labels switched)
   }
 }
 
